[package]
name = "json_log"
version = "0.1.0"
edition = "2021"
description = "Log with JSON"
license = "MIT"
repository = "https://github.com/caojen/json_log"
resolver = "1"
keywords = [
    "google",
    "oauth2"
]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
log = { version = "0.4"}
